fixed duplicate initiliazation errors

--- a/app/views/games/_chat.html.erb
+++ b/app/views/games/_chat.html.erb
@@ -40,7 +40,7 @@
 
 <script>
     //const currentCharacter = <%= raw @current_character.to_json %>; ??????
-    let chatPoll;
+    var chatPoll;
     updateChat()
     //setInterval(() => {updateChat()}, 3000) //Re-poll the chat every 3 seconds (3000 ms)
 
