--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -33,28 +33,28 @@
 </div>
 
 <script>
-    const biome_map = {
+    var biome_map = {
         yellow: 'Desert',
         gray: 'Mountain',
         green: 'Forest',
         blue: 'Ocean'
     };
 
-    const cellColors = <%= raw @tiles.to_json %>;
-    const gameId = <%= @current_game.id %>;
-    const currentCharacter = <%= raw @current_character.to_json %>;
-    let current_position = [currentCharacter.x_position, currentCharacter.y_position];
+    var cellColors = <%= raw @tiles.to_json %>;
+    var gameId = <%= @current_game.id %>;
+    var currentCharacter = <%= raw @current_character.to_json %>;
+    var current_position = [currentCharacter.x_position, currentCharacter.y_position];
 
     // Get the CSRF token from the meta tags
-    const csrfToken = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+    var csrfToken = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
 
-    let previous_position = null;
-    let current_biome = biome_map[cellColors[formatKey(current_position)]];
+    var previous_position = null;
+    var current_biome = biome_map[cellColors[formatKey(current_position)]];
 
     //Looping poll variables
-    let characterPoll;
+    var characterPoll;
 
-    let loading = false;
+    var loading = false;
 
     displayCurrentBiome();
     renderAllCharacters();
