--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -50,8 +50,6 @@
           <hr>
         </div>
       <% end %>
-    <% else %>
-      <p class="text-with-border">You have no items.</p>
     <% end %>
   </div>
 
@@ -61,9 +59,8 @@
 </div>
 
 <script>
-  console.log(<%= raw @items.to_json %>)
-    let shopItemsLoaded = sessionStorage.getItem("shopItemsLoaded") === "true";
-    let initialized = false;
+    var shopItemsLoaded = sessionStorage.getItem("shopItemsLoaded") === "true";
+    var initialized = false;
 
     document.addEventListener("DOMContentLoaded", initializePage);
     document.addEventListener("turbolinks:load", initializePage); // For Turbolinks
