Working on healing options

--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -32,6 +32,11 @@
       <div id="Abilities" class="tabcontent">
         <!-- Abilities Items List -->
       </div>
+
+      <!-- Healing Tab Content -->
+      <div id="Healing" class="tabcontent">
+        <!-- Healing Items List -->
+      </div>
     </div>
 
     <!-- Button to load AI-generated items -->
