--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -174,6 +174,7 @@
                   refreshTileInfo(x, y);
 
                   if (data.character) {
+                      console.log(data.character)
                       updateCharacterInfo(data.character);
                   }
 
