--- a/app/views/games/_chat.html.erb
+++ b/app/views/games/_chat.html.erb
@@ -7,13 +7,12 @@
       <div class="character-details">
         <p><strong>Username:</strong> <span class="character-value"><%= @current_user.username %></span></p>
         <p><strong>Level:</strong> <span class="character-value"><%= @current_character.level %></span></p>
-
         <p><strong>Shards: <span class="character-value" id="shard_amount"><%= @current_user.shard_amount %></span></strong>
         <!-- Fancy Health Bar -->
         <div class="health-bar-container">
           <p><strong>HP:</strong>
-            <span class="character-value"><%= @current_character.currentHealth %></span> /
-            <%= @current_character.maxHealth %>
+            <span class="character-value" id="currHealth"><%= @current_character.currentHealth %></span> /
+            <span class="character-value" id="maxHealth"><%= @current_character.maxHealth %> </span>
           </p>
           <div class="health-bar">
             <div class="health-fill" style="width: <%= ((@current_character.currentHealth.to_f / @current_character.maxHealth.to_f) * 100).round(2) %>%;"></div>
