--- a/app/views/games/_chat.html.erb
+++ b/app/views/games/_chat.html.erb
@@ -80,7 +80,8 @@
         for (const message of chatLog.chatLog) { // Create the new messages.
             let newEntry = document.createElement('div')
             newEntry.innerHTML = '<strong>'+message.user+':</strong> '+message.message
-            chatBox.appendChild(newEntry)
+            if (chatBox)
+                chatBox.appendChild(newEntry)
         }
 
         chatPoll = setTimeout(() => {updateChat()}, 3000) // Call myself again 3 seconds after the last time I have been called.
