--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,4 +1,4 @@
-<div class="shop-container">
+<div class="shop-container" data-turbolinks="false">
   <h1>Shop</h1>
   <div class="shop-sections">
     <!-- Upgrades Section -->
@@ -101,7 +101,8 @@
 </div>
 
 <script>
-  document.addEventListener("turbolinks:load", () =>{
+  document.addEventListener("DOMContentLoaded", () => {
+      console.log("Script initialized"); // Check if this runs
       var SHARD_COST_BASE_USD = 0.75; // base cost per shard in USD
       var API_URL = 'https://v6.exchangerate-api.com/v6/464f4642b6d4d3ec3744b64d/latest/USD'; // updates daily for free plan
 
